students/KarpeshNikita/task_02/src/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-app
  namespace: books-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-app
  template:
    metadata:
      labels:
        app: books-app
    spec:
      containers:
        - name: books
          image: books:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
