students/KarpeshNikita/task_02/src/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-app
  namespace: books-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: books-app
